--- a/.github/workflows/update-report.yml
+++ b/.github/workflows/update-report.yml
@@ -2,6 +2,8 @@ name: github pages
 
 on:
   push:
+    branches:
+      - master
   pull_request:
     branches:
       - master
@@ -33,6 +35,9 @@ jobs:
 
       - name: Generate graph
         run: python nps-schemes-plot.py
+
+      - name: Generate ICICI graph
+        run: python icici-plots.py
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
